# brain-mcp

./: .gitignore  .npmignore  ANALYSIS.md  ARCHITECTURE.md  IMPROVEMENTS.md  LICENSE  README.md  bench-agent-spawn.mjs  bench-agent.mjs  benchmark-agent.mjs  benchmark-mcp.mjs  benchmark-sqlite.mjs  benchmark.mjs  extract-tools.py  improve_plan.json  install.sh  package-lock.json  package.json  pyproject.toml  setup-hermes.sh  smoke-test.mjs  test-context.mjs  test-cross-compat.py  test-e2e.mjs  test-integration.mjs  test-tools.mjs  test_brain_swarm_plugin.py
docs/: watcher-contract.md
hermes/: __init__.py  cli.py  db.py  gate.py  orchestrator.py  prompt.py
hermes-context/: context-db.js  context-db.js.map  context-db.ts  index.ts  package-lock.json  package.json  test.mjs  tsconfig.build.json  tsconfig.json  vitest.config.ts
hermes-context/src/: context-db.ts  index.ts
llm-proxy/: proxy.ts  revert.sh
scripts/: backfill-embeddings.ts  brain-memory.sh  hourly-cron-test.sh
skills/brain-mcp-hermes-hardening/: SKILL.md
src/: agent-env.test.ts  agent-env.ts  agent-watcher.test.ts  agent-watcher.ts  autopilot.ts  bridge.ts  conductor.ts  constants.ts  db.ts  embeddings.ts  gate.ts  http.ts  index.ts  model-resolution.test.ts  model-resolution.ts  pi-core-agent.ts  pi-core-tools.ts  renderer.test.ts  renderer.ts  router.ts  server-log.ts  spawn-recovery.test.ts  spawn-recovery.ts  test-harness.ts  test-inspect.ts  tmux-runtime.test.ts  tmux-runtime.ts  wake-daemon.integration.ts  watchdog.ts  workflow.test.ts  workflow.ts
src/tools/: admin.ts  claims.ts  context.ts  (+16 more)
(+7 files in other folders)
