[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-brain"
version = "1.0.0"
description = "Multi-agent orchestration for Hermes Agent — powered by brain-mcp"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["hermes", "agent", "multi-agent", "orchestration", "brain", "mcp"]

[project.scripts]
hermes-brain = "hermes.cli:main"

[tool.setuptools.packages.find]
include = ["hermes*"]
